adjusted titleLoader to switch classes on done querying rather than hide show elements, which fixes bug on mobile safari

--- a/source/styles/animations.less
+++ b/source/styles/animations.less
@@ -96,7 +96,7 @@
     .animation(fadeIn 150ms);
   }
 }
-.navBar-titleLoader-ellipse {
+.titleLoader-ellipse {
   &:nth-child(1) {
     .animation(toggleFirst 1000ms infinite);
   }
