--- a/source/styles/variables.less
+++ b/source/styles/variables.less
@@ -197,7 +197,7 @@
 @transition-timing--textarea--edit: 150ms;
 
 // content
-@content--navBar-title:               'llllyrics';
-@content--navBar-titleLoader:         'lllloading';
-@content--navBar-titleLoader-ellipse: '.';
-@content--meta-separator:             '\0020\00B7\0020';
+@content--navBar-title:        'llllyrics';
+@content--titleLoader:         'lllloading';
+@content--titleLoader-ellipse: '.';
+@content--meta-separator:      '\0020\00B7\0020';
